# shad3

./: .gitignore  Cargo.toml  Cross.toml  README.md  shad3-ubuntu-latest_aarch64
.cargo/: config.toml
.github/workflows/: rust. yml  rust.yml
src/: main.rs
