[package]
name = "shad3"
version = "1.1.8"
edition = "2021"
authors = ["Alex Goven <7thhexangel@gmail.com>"]
description = "App for hashing entries in blocklists"
license = "GPL-3.0"
repository = "https://github.com/styromaniac/shad3"
documentation = "https://docs.rs/shad3"
homepage = "https://github.com/styromaniac/shad3"
readme = "README.md"
keywords = ["hash", "blocklist", "security"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
anyhow = "1.0.8"
rayon = "1.7.8"
reqwest = { version = "0.11.8", default-features = false, features = ["rustls-tls", "stream"] }
sha3 = "0.10.8"
tokio = { version = "1.32.8", features = ["rt-multi-thread", "macros"] }
regex = "1.9.8"
futures = "0.3.8"
indicatif = "0.17.8"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
