[package]
name = "shad3"
version = "1.1.10"
edition = "2021"
authors = ["Alex Goven <7thhexangel@gmail.com>"]
description = "App for hashing entries in blocklists"
license = "GPL-3.0"
repository = "https://github.com/styromaniac/shad3"
documentation = "https://docs.rs/shad3"
homepage = "https://github.com/styromaniac/shad3"
readme = "README.md"
keywords = ["hash", "blocklist", "security"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
anyhow = "1.0.10"
rayon = "1.7.10"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls", "stream"] }
sha3 = "0.10.10"
tokio = { version = "1.32.10", features = ["rt-multi-thread", "macros"] }
regex = "1.9.10"
futures = "0.3.10"
indicatif = "0.17.10"
hex = "0.4.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = false
